--- a/segmenting-clustering-Copy1.ipynb
+++ b/segmenting-clustering-Copy1.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,37 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(289, 3)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So we have the data we need but the header is also added as a row."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "scrolled": false
-   },
    "outputs": [
     {
      "data": {
@@ -182,28 +153,27 @@
        "4       M4A    North York  Victoria Village"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's add column names "
+    "So we have the data we need but the header is also added as a row.Let's drop that"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -227,47 +197,91 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PostalCode</th>\n",
-       "      <th>Borough</th>\n",
-       "      <th>Neighbourhood</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>M7A</td>\n",
-       "      <td>Queen's Park</td>\n",
+       "      <th>1</th>\n",
+       "      <td>M1A</td>\n",
        "      <td>Not assigned</td>\n",
+       "      <td>Not assigned</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M2A</td>\n",
+       "      <td>Not assigned</td>\n",
+       "      <td>Not assigned</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Harbourfront</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  PostalCode       Borough Neighbourhood\n",
-       "9        M7A  Queen's Park  Not assigned"
+       "     0                 1                 2\n",
+       "1  M1A      Not assigned      Not assigned\n",
+       "2  M2A      Not assigned      Not assigned\n",
+       "3  M3A        North York         Parkwoods\n",
+       "4  M4A        North York  Victoria Village\n",
+       "5  M5A  Downtown Toronto      Harbourfront"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.rename(columns={0:'PostalCode',1:'Borough',2:'Neighbourhood'},inplace=True)\n",
-    "df.loc[df['PostalCode'] == 'M7A']"
+    "df=df.drop([0])\n",
+    "df.head()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's keep all rows where Neighbourhood does have have not assigned"
+    "Let's add column names "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns={0:'PostalCode',1:'Borough',2:'Neighbourhood'},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's drop all rows where Borough is Not Assigned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -276,13 +290,13 @@
        "(211, 3)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = df[df.Neighbourhood != 'Not assigned']\n",
+    "df = df[df.Borough!='Not assigned']\n",
     "df.shape"
    ]
   },
@@ -290,12 +304,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's make sure Neighbourhood has values and there is no Not Assigned data"
+    "Let's make sure Neighbourhood has values and there is no Not Assigned data. Where there is , we will put borough data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -325,12 +339,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Postcode</td>\n",
-       "      <td>Borough</td>\n",
-       "      <td>Neighbourhood</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>M3A</td>\n",
@@ -355,20 +363,26 @@
        "      <td>Downtown Toronto</td>\n",
        "      <td>Regent Park</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Heights</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "  PostalCode           Borough     Neighbourhood\n",
-       "0   Postcode           Borough     Neighbourhood\n",
        "3        M3A        North York         Parkwoods\n",
        "4        M4A        North York  Victoria Village\n",
        "5        M5A  Downtown Toronto      Harbourfront\n",
-       "6        M5A  Downtown Toronto       Regent Park"
+       "6        M5A  Downtown Toronto       Regent Park\n",
+       "7        M6A        North York  Lawrence Heights"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +446,7 @@
        "6        M5A  Downtown Toronto   Regent Park"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 74,
    "metadata": {
     "scrolled": true
    },
@@ -514,7 +528,7 @@
        "53        M5A  Downtown Toronto  Harbourfront,Regent Park"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 75,
    "metadata": {
     "scrolled": false
    },
@@ -825,111 +839,111 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>85</th>\n",
+       "      <td>M7A</td>\n",
+       "      <td>Queen's Park</td>\n",
+       "      <td>Queen's Park</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
        "      <td>M7R</td>\n",
        "      <td>Mississauga</td>\n",
        "      <td>Canada Post Gateway Processing Centre</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86</th>\n",
+       "      <th>87</th>\n",
        "      <td>M7Y</td>\n",
        "      <td>East Toronto</td>\n",
        "      <td>Business Reply Mail Processing Centre 969 Eastern</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87</th>\n",
+       "      <th>88</th>\n",
        "      <td>M8V</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Humber Bay Shores,Mimico South,New Toronto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
+       "      <th>89</th>\n",
        "      <td>M8W</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Alderwood,Long Branch</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
+       "      <th>90</th>\n",
        "      <td>M8X</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>The Kingsway,Montgomery Road,Old Mill North</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
+       "      <th>91</th>\n",
        "      <td>M8Y</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Humber Bay,King's Mill Park,Kingsway Park Sout...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
+       "      <th>92</th>\n",
        "      <td>M8Z</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Kingsway Park South West,Mimico NW,The Queensw...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
+       "      <th>93</th>\n",
        "      <td>M9A</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Islington Avenue</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>93</th>\n",
+       "      <th>94</th>\n",
        "      <td>M9B</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Cloverdale,Islington,Martin Grove,Princess Gar...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>94</th>\n",
+       "      <th>95</th>\n",
        "      <td>M9C</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Bloordale Gardens,Eringate,Markland Wood,Old B...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
+       "      <th>96</th>\n",
        "      <td>M9L</td>\n",
        "      <td>North York</td>\n",
        "      <td>Humber Summit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>96</th>\n",
+       "      <th>97</th>\n",
        "      <td>M9M</td>\n",
        "      <td>North York</td>\n",
        "      <td>Emery,Humberlea</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
+       "      <th>98</th>\n",
        "      <td>M9N</td>\n",
        "      <td>York</td>\n",
        "      <td>Weston</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
+       "      <th>99</th>\n",
        "      <td>M9P</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Westmount</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99</th>\n",
+       "      <th>100</th>\n",
        "      <td>M9R</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Kingsview Village,Martin Grove Gardens,Richvie...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
+       "      <th>101</th>\n",
        "      <td>M9V</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Albion Gardens,Beaumond Heights,Humbergate,Jam...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>101</th>\n",
+       "      <th>102</th>\n",
        "      <td>M9W</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Northwest</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>Postcode</td>\n",
-       "      <td>Borough</td>\n",
-       "      <td>Neighbourhood</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -981,24 +995,24 @@
        "82         M6P      West Toronto   \n",
        "83         M6R      West Toronto   \n",
        "84         M6S      West Toronto   \n",
-       "85         M7R       Mississauga   \n",
-       "86         M7Y      East Toronto   \n",
-       "87         M8V         Etobicoke   \n",
-       "88         M8W         Etobicoke   \n",
-       "89         M8X         Etobicoke   \n",
-       "90         M8Y         Etobicoke   \n",
-       "91         M8Z         Etobicoke   \n",
-       "92         M9A         Etobicoke   \n",
-       "93         M9B         Etobicoke   \n",
-       "94         M9C         Etobicoke   \n",
-       "95         M9L        North York   \n",
-       "96         M9M        North York   \n",
-       "97         M9N              York   \n",
-       "98         M9P         Etobicoke   \n",
-       "99         M9R         Etobicoke   \n",
-       "100        M9V         Etobicoke   \n",
-       "101        M9W         Etobicoke   \n",
-       "102   Postcode           Borough   \n",
+       "85         M7A      Queen's Park   \n",
+       "86         M7R       Mississauga   \n",
+       "87         M7Y      East Toronto   \n",
+       "88         M8V         Etobicoke   \n",
+       "89         M8W         Etobicoke   \n",
+       "90         M8X         Etobicoke   \n",
+       "91         M8Y         Etobicoke   \n",
+       "92         M8Z         Etobicoke   \n",
+       "93         M9A         Etobicoke   \n",
+       "94         M9B         Etobicoke   \n",
+       "95         M9C         Etobicoke   \n",
+       "96         M9L        North York   \n",
+       "97         M9M        North York   \n",
+       "98         M9N              York   \n",
+       "99         M9P         Etobicoke   \n",
+       "100        M9R         Etobicoke   \n",
+       "101        M9V         Etobicoke   \n",
+       "102        M9W         Etobicoke   \n",
        "\n",
        "                                         Neighbourhood  \n",
        "0                                        Rouge,Malvern  \n",
@@ -1044,29 +1058,29 @@
        "82                        High Park,The Junction South  \n",
        "83                               Parkdale,Roncesvalles  \n",
        "84                                   Runnymede,Swansea  \n",
-       "85               Canada Post Gateway Processing Centre  \n",
-       "86   Business Reply Mail Processing Centre 969 Eastern  \n",
-       "87          Humber Bay Shores,Mimico South,New Toronto  \n",
-       "88                               Alderwood,Long Branch  \n",
-       "89         The Kingsway,Montgomery Road,Old Mill North  \n",
-       "90   Humber Bay,King's Mill Park,Kingsway Park Sout...  \n",
-       "91   Kingsway Park South West,Mimico NW,The Queensw...  \n",
-       "92                                    Islington Avenue  \n",
-       "93   Cloverdale,Islington,Martin Grove,Princess Gar...  \n",
-       "94   Bloordale Gardens,Eringate,Markland Wood,Old B...  \n",
-       "95                                       Humber Summit  \n",
-       "96                                     Emery,Humberlea  \n",
-       "97                                              Weston  \n",
-       "98                                           Westmount  \n",
-       "99   Kingsview Village,Martin Grove Gardens,Richvie...  \n",
-       "100  Albion Gardens,Beaumond Heights,Humbergate,Jam...  \n",
-       "101                                          Northwest  \n",
-       "102                                      Neighbourhood  \n",
+       "85                                        Queen's Park  \n",
+       "86               Canada Post Gateway Processing Centre  \n",
+       "87   Business Reply Mail Processing Centre 969 Eastern  \n",
+       "88          Humber Bay Shores,Mimico South,New Toronto  \n",
+       "89                               Alderwood,Long Branch  \n",
+       "90         The Kingsway,Montgomery Road,Old Mill North  \n",
+       "91   Humber Bay,King's Mill Park,Kingsway Park Sout...  \n",
+       "92   Kingsway Park South West,Mimico NW,The Queensw...  \n",
+       "93                                    Islington Avenue  \n",
+       "94   Cloverdale,Islington,Martin Grove,Princess Gar...  \n",
+       "95   Bloordale Gardens,Eringate,Markland Wood,Old B...  \n",
+       "96                                       Humber Summit  \n",
+       "97                                     Emery,Humberlea  \n",
+       "98                                              Weston  \n",
+       "99                                           Westmount  \n",
+       "100  Kingsview Village,Martin Grove Gardens,Richvie...  \n",
+       "101  Albion Gardens,Beaumond Heights,Humbergate,Jam...  \n",
+       "102                                          Northwest  \n",
        "\n",
        "[103 rows x 3 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1100,7 @@
        "(103, 3)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
